# OmniRustAdbCommander

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.gradle  settings.gradle.kts
app-ui/: Cargo.toml
app-ui/src/: main.rs
backend/: Cargo.toml
backend/src/: adb.rs  lib.rs  local.rs  mock.rs  traits.rs
common/: Cargo.toml
common/src/: models.rs
docs/: ADB_Explorer_Implementation_Plan.md  progress_audit.json
explorer-core/: Cargo.toml
explorer-core/src/: cache.rs  controller.rs  filters.rs  lib.rs  selection.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
media-scanner/: Cargo.toml
media-scanner/src/: lib.rs
queue/: Cargo.toml
queue/src/: events.rs  lib.rs  manager.rs  scheduler.rs  task.rs  worker.rs
