[workspace]
members = [
    "app-ui",
    "explorer-core",
    "queue",
    "backend",
    "media-scanner",
    "common",
]
exclude = ["radb"]
resolver = "2"

[workspace.dependencies]
# Common dependencies can be added here
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
radb = { path = "radb", features = ["tokio_async"], default-features = false }
